--- a/package.json
+++ b/package.json
@@ -1,36 +1,104 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
+  "name": "paypass-backend",
+  "version": "2.0.0",
+  "description": "PayPass Backend API - Car Wash Management System",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "auto": "node auto-start.js",
-    "test-db": "node test-connection.js",
-    "connect-frontend": "node connect-frontend.js",
-    "vercel-deploy": "vercel --prod --token gXI4wkLyvcviaHEVcQuMCjGl",
-    "vercel-dev": "vercel dev",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose --detectOpenHandles",
+    "test:api": "jest tests/api.test.js --verbose --detectOpenHandles",
+    "test:mongodb": "jest tests/mongodb.test.js --verbose --detectOpenHandles",
+    "test:qr": "jest tests/qr.test.js --verbose --detectOpenHandles",
+    "test:qr-quick": "node scripts/test-qr-only.js",
+    "test:payment": "jest tests/payment.test.js --verbose --detectOpenHandles",
+    "test:payment-gateway": "jest tests/payment-gateway.test.js --verbose --detectOpenHandles",
+    "test:gateway-quick": "node scripts/test-payment-gateway.js",
+    "seed": "node seed-database.js",
+    "quick-test": "node quick-test-with-seed-and-payments.js",
+    "test:all-endpoints": "node test-all-endpoints.js",
+    "test:all": "jest tests/ --verbose --detectOpenHandles",
+    "test:watch": "jest --watch --verbose",
+    "test:coverage": "jest --coverage --verbose",
+    "test-db": "node scripts/test-connection.js",
+    "vercel-deploy": "vercel --prod",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write .",
+    "check-all": "npm run lint && npm run test:all",
+    "api-docs": "node scripts/generate-api-docs.js",
+    "db:check": "node scripts/check-all-models.js",
+    "db:test": "node scripts/test-mongodb-connection.js",
+    "db:fix": "node scripts/fix-all-issues.js",
+    "data:create": "node scripts/create-real-data.js",
+    "data:clear": "node scripts/clear-and-create-real-data.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
+  "keywords": [
+    "paypass",
+    "car-wash",
+    "api",
+    "nodejs",
+    "express",
+    "mongodb",
+    "mongoose",
+    "jwt",
+    "payment",
+    "qr-code"
+  ],
+  "author": "PayPass Team",
+  "license": "MIT",
   "dependencies": {
-    "apple-signin-auth": "^2.0.0",
     "axios": "^1.6.0",
-    "bcryptjs": "^3.0.2",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
-    "express": "^5.1.0",
-    "firebase-admin": "^13.4.0",
-    "google-auth-library": "^10.1.0",
+    "express": "^4.18.2",
+    "firebase-admin": "^11.11.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.1",
-    "node-cron": "^4.2.0",
-    "nodemon": "^3.1.10",
-    "qrcode": "^1.5.4",
-    "twilio": "^5.7.2"
-  }
+    "mongoose": "^7.5.0",
+    "qrcode": "^1.5.3",
+    "twilio": "^4.19.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "eslint": "^8.47.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
+    "prettier": "^3.0.2",
+    "supertest": "^6.3.4"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "<rootDir>/tests/setup.js"
+    ],
+    "testTimeout": 30000,
+    "collectCoverageFrom": [
+      "controllers/**/*.js",
+      "models/**/*.js",
+      "services/**/*.js",
+      "middleware/**/*.js",
+      "routes/**/*.js",
+      "!**/node_modules/**",
+      "!**/tests/**"
+    ],
+    "coverageReporters": [
+      "text",
+      "lcov",
+      "html"
+    ],
+    "coverageDirectory": "coverage"
+  },
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/paypass/backend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/paypass/backend/issues"
+  },
+  "homepage": "https://github.com/paypass/backend#readme"
 }
